force-app/main/default/objects/Contract_Employee__c/Contract_Employee__c.object-meta.xml
<CustomObject>
    <label>Contract Employee</label>
    <nameField>
        <displayFormat>contract-emp-{0000}</displayFormat>
        <label>Contract Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>